# kabos

./: .gitignore  Cargo.toml  OVMF_VARS-1024x768.fd  README.md  build.py  main.rs
kernel/: Cargo.toml  x86_64-unknown-none.json
kernel/.cargo/: config
loader/: Cargo.toml  OVMF_VARS-1024x768.fd  build.py  main.rs
