cargo-features = ["edition2021"]

[package]
name = "kabos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uefi = "0.11.0"
uefi-services = "0.8.0"
rlibc = "1.0.0"

[[bin]]
name = "kabos"
path = "main.rs"
